--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -5,7 +5,9 @@
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <ng-container *ngIf="accountService.currentUser$  | async">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+                    <a class="nav-link" routerLink="/members" 
+                        [routerLinkActiveOptions]="{exact: true}"
+                        routerLinkActive="active">Matches</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
